# cic-web

./: .env.example  .gitignore  AGENTS.md  Báo cáo đánh giá và đề xuất nâng cấp.docx  Makefile  README.md  RULES.md  add-particle-comp.cjs  compose.yaml  docker-compose.yml  fix-const-events.cjs  fix-constellation-bg.cjs  fix-constellation.cjs  fix-hero.cjs  fix-stats-glow.cjs  fix-textarea.cjs  index.html  package-lock.json  package.json  remove-particle.cjs  reorder2.js  shrink-boxes.cjs  update-global-network.cjs
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c2b0771b541_change_vector_dimensions_to_768_for_.py  20260717_0001_create_users.py  20260717_0002_add_document_sync_source.py  20260717_0003_hierarchical_rag.py  20260717_0004_complete_business_schema.py  20260720_0005_align_demo_business_data.py  20260720_0006_feature_control.py  20260720_0007_seed_system_controls.py  20260720_0008_document_ocr_metadata.py  30fceda30d6e_add_signer_and_date_posted_to_legal_.py  66d8a62ebd92_add_metadata_columns_to_legal_documents.py  e1b2d05b6978_add_metadata_columns_to_products.py  (+2 more)
backend/app/: main.py
backend/rag_cic_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: audit_schema.py
backend/tests/: conftest.py  test_auth_api.py  test_capabilities_api.py  test_contact_intent.py  test_document_processor.py  test_documents_api.py  test_embedding_service.py  test_health.py  test_module_registry.py  test_price_parser.py  test_products_api.py  test_rag_api.py  test_rag_intent.py  test_security.py
(+249 files in other folders)
