[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-cic-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "celery[redis]>=5.4,<6",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pwdlib[argon2]>=0.3,<1",
  "prometheus-client>=0.21,<1",
  "pydantic-settings>=2.7,<3",
  "pyjwt>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "redis>=5.2,<6",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
  "pgvector>=0.3.0",
  "google-auth>=2.30.0",
  "google-api-python-client>=2.130.0",
  "openpyxl>=3.1.2",
  "minio>=7.2.7",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "pymupdf>=1.25,<2",
  "pytesseract>=0.3.13,<1",
  "pillow>=11,<12",
]

[project.optional-dependencies]
dev = ["aiosqlite>=0.20,<1", "pytest>=8.3,<9", "pytest-asyncio>=0.25,<1", "ruff>=0.9,<1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]
